[FIX] movingWordBorder: weird spacing issue

--- a/my-portfolio/src/components/movingWordBorder/movingWordBorder.css
+++ b/my-portfolio/src/components/movingWordBorder/movingWordBorder.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 150%;
+  width: 100%;
   height: 100px;
   white-space: nowrap;
   flex-direction: row;
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 150%;
+  height: 100%;
   width: 100px;
   flex-direction: column;
   top: 0;
